--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neeo-fibaro-scenes-adapter",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Controlling scenes from Fibaro Home Center Controller via NEEO remote",
   "keywords": [
     "fibaro",
@@ -20,8 +20,8 @@
   ],
   "private": false,
   "dependencies": {
-    "neeo-sdk": "*",
-    "ip": "1.1.5"
+    "ip": "1.1.5",
+    "neeo-sdk": "*"
   },
   "devDependencies": {
     "jshint": "^2.9.4",
